<resources>
    <string name="app_name">Weather_Forecast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logint">登陆界面</string>
    <string name="etUser_hint">用户名/邮箱/手机</string>
    <string name="pswHint">密码</string>
    <string name="remember">记住密码</string>
    <string name="register">注册</string>
    <string name="logintxt">登录</string>
    <string name="insertuser">请输入用户名</string>
    <string name="insertmail">请输入邮箱</string>
    <string name="insertphone">请输入手机号</string>
    <string name="insertpassword">请输入密码</string>
    <string name="confirmpassword">确认密码</string>
</resources>
